# iron-oxide

./: Cargo.toml  README.md
examples/device/: gol.metal  main.rs  quad.metal  quad.metallib
examples/gol/: gol.metal  main.rs
examples/quad/: main.rs  quad.metal
examples/skybox/: main.rs
examples/sum/: main.rs
src/: commandbuffer.rs  commandqueue.rs  depthstencil.rs  device.rs  drawable.rs  enums.rs  layer.rs  lib.rs  library.rs  misc.rs  sampler.rs  surface.rs  util.rs
src/encoder/: compute.rs  mod.rs  pass.rs  render.rs
src/pipeline/: compute.rs  mod.rs  render.rs
src/resource/: buffer.rs  mod.rs  texture.rs
