[package]
name = "iron-oxide"
version = "0.1.0"
authors = ["Lonsdaleiter <lonsdaleiteproductions@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2.7"
block = "0.1.6"
log = "0.4.8"

[dev-dependencies]
winit = "0.22.1"
simple_logger = "1.6.0"
